[fixes #17513297] classifications elements aligned better

--- a/app/stylesheets/partials/_form.sass
+++ b/app/stylesheets/partials/_form.sass
@@ -94,7 +94,7 @@ input[type="text"], textarea, select
         padding: 0 0 10px !important
     label
       float: left
-      margin-top: 9px
+      margin-top: 7px
       width: 18%
 
     select, input[type=text], input[type=password], textarea
