--- a/app/stylesheets/partials/_lists.sass
+++ b/app/stylesheets/partials/_lists.sass
@@ -488,20 +488,20 @@ ul.activity_tree
       height: 13px
       line-height: 1
       margin: 0 3px 0 5px !important
-      padding: 2px
+      padding: 1px
       text-align: center
-      width: 12px !important
+      width: 13px !important
       &.expanded
         background: #fff
         color: red
         position: relative
-        top: 8px
+        top: 9px
         +border-radius(10px)
       &.collapsed
         background: #fff
         color: green
         position: relative
-        top: 8px
+        top: 9px
         +border-radius(10px)
 
     ul
@@ -553,7 +553,7 @@ ul.activity_tree
       width: 150px
   .tooltip
     float: left
-    margin: 7px 4px 0 3px
+    margin: 5px 5px 0 3px
   input[type=checkbox]
     float: left
     margin-top: 5px
